weblog-web.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: default
  labels:
    app: weblog
    type: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: weblog
    type: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
  labels:
    app: weblog
    type: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weblog
      type: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 14
  template:
    metadata:
      name: nginx
      namespace: default
      labels:
        app: weblog
        type: frontend
    spec:
      containers:
        - name: nginx
          image: weblog-web:v1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /home/nginx
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
